[package]
name = "retry-rs"
version = "0.1.0"
edition = "2024"
description = 'retry utils'
license = 'MIT'
authors = ['yaobos@outlook.com']
repository = 'https://github.com/yaobo-lab/retry-rs'



[dependencies]
log = { version = '0.4.29', default-features = false, features = ['std'] }
tokio = { version = '1.50.0', default-features = false, features = ['time'] }


[dev-dependencies] 
tokio = { version = '1.50.0',features = ['full'] }